--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,7 +2,7 @@
 
   <ion-header [translucent]="true" class="ion-header">
     <ion-title class="ion-title"> Loose in the sky! </ion-title>
-    <ion-img src="../../assets/img/main.png"></ion-img>
+    <ion-img src="assets/img/main.png"></ion-img>
     <ion-label>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam ullam libero voluptas rerum
       praesentium.
