--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
     <ion-row class="ion-row">
 
       <ion-col class="ion-col">
-        <ion-img src="../../assets/img/img1.png" class="ion-img"></ion-img>
+        <ion-img src="assets/img/img1.png" class="ion-img"></ion-img>
         <ion-label color="dark" class="ion-label">Torres del Paine, Patagonia</ion-label>
       </ion-col>
 
