--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,12 +12,12 @@
       </ion-col>
 
       <ion-col class="ion-col">
-        <ion-img src="../../assets/img/img2.png" class="ion-img"></ion-img>
+        <ion-img src="assets/img/img2.png" class="ion-img"></ion-img>
         <ion-label color="dark" class="ion-label">Colorado Canyon River</ion-label>
       </ion-col>
 
       <ion-col class="ion-col">
-        <ion-img src="../../assets/img/img3.png" class="ion-img"></ion-img>
+        <ion-img src="assets/img/img3.png" class="ion-img"></ion-img>
         <ion-label color="dark" class="ion-label">Serengeti Masai Mara</ion-label>
       </ion-col>
 
